--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8081
 server.context-path=/app1
 
-cas.serverUrlPrefix=http://localhost:8090/cas
-cas.serverLoginUrl=http://localhost:8090/cas/login
-cas.clientHostUrl=http://localhost:8081
-#cas.ignorePattern=
+cas.serverUrlPrefix=http://cas-server.com:8090/cas
+cas.serverLoginUrl=http://cas-server.com:8090/cas/login
+cas.clientHostUrl=http://cas-app1.com:8081
+#cas.ignorePattern=/aa
