格式化代码

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,4 @@ server.context-path=/app1
 cas.serverUrlPrefix=http://cas-server.com:8090/cas
 cas.serverLoginUrl=http://cas-server.com:8090/cas/login
 cas.clientHostUrl=http://cas-app1.com:8081
-cas.exceptPaths=fanbin,laoguo
+cas.exceptPaths=fanbin,laoguo,aa
